--- a/about/index.html
+++ b/about/index.html
@@ -1,1 +1,353 @@
+<!doctype html>
+<html lang="en-US">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+  <title>About KitchenGearLab | How We Review Kitchen Gear</title>
+  <meta name="description" content="KitchenGearLab is a calm, test-driven kitchen gear review site. Learn our methodology, editorial standards, and how we keep recommendations practical and unbiased." />
+  <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
+  <meta name="referrer" content="strict-origin-when-cross-origin" />
+  <meta name="color-scheme" content="light only" />
+  <meta name="theme-color" content="#ffffff" />
+
+  <link rel="canonical" href="https://kitchengearlab.github.io/about/" />
+  <link rel="stylesheet" href="/assets/css/styles.css" />
+
+  <!-- Favicons (root) -->
+  <link rel="icon" href="/favicon.ico" sizes="any" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+
+  <!-- Open Graph -->
+  <meta property="og:site_name" content="KitchenGearLab" />
+  <meta property="og:type" content="article" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:url" content="https://kitchengearlab.github.io/about/" />
+  <meta property="og:title" content="About KitchenGearLab | How We Review Kitchen Gear" />
+  <meta property="og:description" content="A calm, test-driven approach to kitchen gear reviews: methodology, editorial standards, and what we prioritize." />
+  <meta property="og:image" content="https://kitchengearlab.github.io/assets/images/og/about-og-1200x630.webp" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:type" content="image/webp" />
+  <meta property="og:image:alt" content="Clean, premium kitchen workspace with tools laid out for evaluation in soft daylight." />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="About KitchenGearLab | How We Review Kitchen Gear" />
+  <meta name="twitter:description" content="Methodology, editorial standards, and how we keep recommendations practical and unbiased." />
+  <meta name="twitter:image" content="https://kitchengearlab.github.io/assets/images/og/about-og-1200x630.webp" />
+  <meta name="twitter:image:alt" content="Clean, premium kitchen workspace with tools laid out for evaluation in soft daylight." />
+
+  <!-- Performance: Hero preload -->
+  <link rel="preload" as="image"
+        href="https://kitchengearlab.github.io/assets/images/hero/about-hero-1600x840.webp"
+        imagesrcset="https://kitchengearlab.github.io/assets/images/hero/about-hero-1600x840.webp 1600w, https://kitchengearlab.github.io/assets/images/hero/about-hero-2400x1260.webp 2400w"
+        imagesizes="(max-width: 900px) 100vw, 40vw" />
+
+  <link rel="preload" as="image"
+        href="https://kitchengearlab.github.io/assets/images/brand/kitchengearlab-logo-512.png" />
+
+  <!-- GA4: connection hints -->
+  <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin />
+  <link rel="dns-prefetch" href="//www.googletagmanager.com" />
+
+  <!-- ✅ Google Analytics 4 (GA4) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PNC93WEF7E"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-PNC93WEF7E', { anonymize_ip: true, send_page_view: true });
+  </script>
+
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@graph": [
+      {
+        "@type": "Organization",
+        "@id": "https://kitchengearlab.github.io/#organization",
+        "name": "KitchenGearLab",
+        "url": "https://kitchengearlab.github.io/",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://kitchengearlab.github.io/assets/images/brand/kitchengearlab-logo-512.png",
+          "width": 512,
+          "height": 512
+        }
+      },
+      {
+        "@type": "WebSite",
+        "@id": "https://kitchengearlab.github.io/#website",
+        "name": "KitchenGearLab",
+        "url": "https://kitchengearlab.github.io/",
+        "publisher": { "@id": "https://kitchengearlab.github.io/#organization" },
+        "inLanguage": "en-US"
+      },
+      {
+        "@type": "BreadcrumbList",
+        "@id": "https://kitchengearlab.github.io/about/#breadcrumbs",
+        "itemListElement": [
+          { "@type": "ListItem", "position": 1, "name": "Home", "item": "https://kitchengearlab.github.io/" },
+          { "@type": "ListItem", "position": 2, "name": "About", "item": "https://kitchengearlab.github.io/about/" }
+        ]
+      },
+      {
+        "@type": "AboutPage",
+        "@id": "https://kitchengearlab.github.io/about/#webpage",
+        "url": "https://kitchengearlab.github.io/about/",
+        "name": "About KitchenGearLab | How We Review Kitchen Gear",
+        "description": "KitchenGearLab is a calm, test-driven kitchen gear review site. Learn our methodology, editorial standards, and how we keep recommendations practical and unbiased.",
+        "isPartOf": { "@id": "https://kitchengearlab.github.io/#website" },
+        "publisher": { "@id": "https://kitchengearlab.github.io/#organization" },
+        "inLanguage": "en-US",
+        "breadcrumb": { "@id": "https://kitchengearlab.github.io/about/#breadcrumbs" },
+        "primaryImageOfPage": {
+          "@type": "ImageObject",
+          "url": "https://kitchengearlab.github.io/assets/images/og/about-og-1200x630.webp",
+          "width": 1200,
+          "height": 630
+        },
+        "datePublished": "2026-02-01",
+        "dateModified": "2026-02-01"
+      }
+    ]
+  }
+  </script>
+</head>
+
+<body>
+  <a class="skip-link" href="#main">Skip to content</a>
+
+  <header class="site-header" role="banner">
+    <div class="container">
+      <div class="header-inner">
+        <a class="brand" href="/" aria-label="KitchenGearLab home">
+          <img
+            src="https://kitchengearlab.github.io/assets/images/brand/kitchengearlab-logo-512.png"
+            width="32"
+            height="32"
+            alt=""
+            loading="eager"
+            decoding="async"
+          />
+          <span class="brand-text">
+            <span class="brand-name">KitchenGearLab</span>
+            <span class="brand-tagline">Neutral reviews. Practical decisions.</span>
+          </span>
+        </a>
+
+        <nav class="site-nav" aria-label="Primary">
+          <ul class="nav-list">
+            <li><a href="/guides/">Guides</a></li>
+            <li><a href="/best-air-fryers/">Best Air Fryers</a></li>
+            <li><a href="/best-air-fryers/ninja-air-fryers/">Ninja Hub</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
+
+  <main id="main" role="main" tabindex="-1">
+
+    <section class="hero" aria-labelledby="hero-title">
+      <div class="container">
+        <div class="hero-grid">
+
+          <div class="hero-copy">
+            <h1 id="hero-title">About KitchenGearLab</h1>
+
+            <p class="lead">
+              We publish calm, test-driven kitchen gear reviews and buying guides.
+              Our goal is simple: explain trade-offs clearly so you can buy what fits your kitchen.
+            </p>
+
+            <ul class="checklist">
+              <li>We prioritize everyday usability over “spec-sheet bragging”.</li>
+              <li>We explain what matters, what doesn’t, and why.</li>
+              <li>We update pages when models, availability, or key details change.</li>
+            </ul>
+
+            <div class="hero-actions" role="group" aria-label="Primary actions">
+              <a class="btn btn-accent" href="/best-air-fryers/">Browse Best Air Fryers</a>
+              <a class="btn btn-secondary" href="#standards">Editorial standards</a>
+            </div>
+
+            <p class="micro-note">
+              Quick links:
+              <a href="/disclosure/">Disclosure</a> ·
+              <a href="/privacy/">Privacy</a>
+            </p>
+
+            <p class="small">Last updated: 2026-02-01</p>
+          </div>
+
+          <div class="hero-media" aria-label="Hero image">
+            <picture>
+              <source
+                type="image/webp"
+                srcset="https://kitchengearlab.github.io/assets/images/hero/about-hero-1600x840.webp 1600w,
+                        https://kitchengearlab.github.io/assets/images/hero/about-hero-2400x1260.webp 2400w"
+                sizes="(max-width: 900px) 100vw, 40vw"
+              />
+              <img
+                src="https://kitchengearlab.github.io/assets/images/hero/about-hero-1600x840.webp"
+                width="1600"
+                height="840"
+                alt="Clean, premium kitchen workspace with tools laid out for evaluation in soft daylight."
+                loading="eager"
+                decoding="async"
+                fetchpriority="high"
+              />
+            </picture>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <section class="section" aria-labelledby="mission-title">
+      <div class="container">
+        <div class="section-head">
+          <h2 id="mission-title">What we do</h2>
+          <p class="section-subtitle">A practical review site for real kitchens.</p>
+        </div>
+
+        <div class="stack">
+          <p>
+            Kitchen gear is full of noise: inflated claims, feature overload, and reviews that skip the boring stuff
+            that actually matters after day 14 (cleanup, workflow friction, consistency).
+          </p>
+          <p>
+            We aim to be the opposite. We write for people who want a clear decision with a clear reason.
+          </p>
+
+          <div class="note">
+            <p class="small" style="margin:0;">
+              If you’re in a hurry, start with <a href="/best-air-fryers/">Best Air Fryers</a>,
+              then use the <a href="/best-air-fryers/ninja-air-fryers/">Ninja Hub</a> if you’re comparing models within one brand.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section highlight" id="standards" aria-labelledby="standards-title">
+      <div class="container">
+        <div class="section-head">
+          <h2 id="standards-title">Editorial standards</h2>
+          <p class="section-subtitle">How we keep the tone neutral and the advice usable.</p>
+        </div>
+
+        <div class="stack">
+          <ul>
+            <li><strong>Trade-offs first:</strong> we don’t crown a “best for everyone”. We match use-cases to products.</li>
+            <li><strong>Plain-language criteria:</strong> we explain the few variables that actually drive results.</li>
+            <li><strong>No brand worship:</strong> we look for performance and usability, not logos.</li>
+            <li><strong>Update discipline:</strong> we revise pages when models change or key information shifts.</li>
+          </ul>
+
+          <div class="note">
+            <p class="small" style="margin:0;">
+              We avoid hype claims and keep recommendations conservative. If something is unclear, we say so.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section" id="method" aria-labelledby="method-title">
+      <div class="container">
+        <div class="section-head">
+          <h2 id="method-title">How we evaluate</h2>
+          <p class="section-subtitle">Repeatable checks that reflect everyday home cooking.</p>
+        </div>
+
+        <div class="stack">
+          <p class="muted">
+            Our review framework focuses on what you feel in daily use, not just lab-like numbers.
+            When we compare products, we prioritize consistency and workflow.
+          </p>
+
+          <ul>
+            <li><strong>Usability:</strong> controls, ergonomics, visibility, daily friction.</li>
+            <li><strong>Performance consistency:</strong> repeatability across batches and foods.</li>
+            <li><strong>Cleanup:</strong> residue traps, dishwasher practicality, coating realities.</li>
+            <li><strong>Capacity & footprint:</strong> real basket space vs counter space.</li>
+            <li><strong>Durability cues:</strong> fit/finish, hinges, basket rails, coating wear signals.</li>
+          </ul>
+
+          <div class="note">
+            <p class="small" style="margin:0;">
+              <strong>Example checks:</strong> preheat stability, batch-to-batch crisping consistency, smoke management,
+              basket cleanup friction, noise comfort, and storage reality.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section" aria-labelledby="trust-title">
+      <div class="container">
+        <div class="section-head">
+          <h2 id="trust-title">Trust notes</h2>
+          <p class="section-subtitle">Transparency, disclosure, and what this site is (and isn’t).</p>
+        </div>
+
+        <div class="stack">
+          <div class="note">
+            <p class="small" style="margin:0;">
+              <strong>Affiliate disclosure:</strong> Some links may earn a commission. See <a href="/disclosure/">Disclosure</a>.
+            </p>
+          </div>
+
+          <div class="note attention">
+            <p class="small" style="margin:0;">
+              <strong>Informational only:</strong> Product details can change, and results can vary by model and usage.
+            </p>
+          </div>
+
+          <p class="small">Last updated: 2026-02-01</p>
+        </div>
+      </div>
+    </section>
+
+  </main>
+
+  <footer class="site-footer" role="contentinfo">
+    <div class="container">
+      <div class="footer-grid">
+        <div>
+          <p class="footer-name">KitchenGearLab</p>
+          <p class="footer-note">Neutral, test-driven kitchen gear reviews and buying guides.</p>
+        </div>
+
+        <nav aria-label="Footer">
+          <ul class="footer-links">
+            <li><a href="/guides/">Guides</a></li>
+            <li><a href="/best-air-fryers/">Best Air Fryers</a></li>
+            <li><a href="/best-air-fryers/ninja-air-fryers/">Ninja Hub</a></li>
+            <li><a href="/about/">About</a></li>
+            <li><a href="/disclosure/">Disclosure</a></li>
+            <li><a href="/privacy/">Privacy</a></li>
+          </ul>
+        </nav>
+      </div>
+
+      <div class="footer-legal">
+        <p class="small">
+          Affiliate disclosure: Some links may earn a commission. See <a href="/disclosure/">Disclosure</a>.
+        </p>
+        <p class="small">
+          Privacy: <a href="/privacy/">Privacy policy</a>.
+        </p>
+        <p class="small"><span aria-hidden="true">©</span> KitchenGearLab</p>
+      </div>
+    </div>
+  </footer>
+</body>
+</html>
