--- a/guides/index.html
+++ b/guides/index.html
@@ -1,1 +1,255 @@
+<!doctype html>
+<html lang="en-US">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+  <title>Guides | KitchenGearLab</title>
+  <meta name="description" content="Practical kitchen gear guides: how to choose, what matters, and clear explanations before you buy." />
+  <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
+  <meta name="referrer" content="strict-origin-when-cross-origin" />
+  <meta name="color-scheme" content="light only" />
+  <meta name="theme-color" content="#ffffff" />
+
+  <link rel="canonical" href="https://kitchengearlab.github.io/guides/" />
+  <link rel="stylesheet" href="/assets/css/styles.css" />
+
+  <!-- Favicons (root) -->
+  <link rel="icon" href="/favicon.ico" sizes="any" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+
+  <!-- Open Graph (no image yet) -->
+  <meta property="og:site_name" content="KitchenGearLab" />
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:url" content="https://kitchengearlab.github.io/guides/" />
+  <meta property="og:title" content="Guides | KitchenGearLab" />
+  <meta property="og:description" content="Practical kitchen gear guides: how to choose, what matters, and clear explanations before you buy." />
+
+  <!-- Twitter (no image yet) -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="Guides | KitchenGearLab" />
+  <meta name="twitter:description" content="Practical kitchen gear guides: how to choose, what matters, and clear explanations before you buy." />
+
+  <link rel="preload" as="image"
+        href="https://kitchengearlab.github.io/assets/images/brand/kitchengearlab-logo-512.png" />
+
+  <!-- GA4: connection hints -->
+  <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin />
+  <link rel="dns-prefetch" href="//www.googletagmanager.com" />
+
+  <!-- ✅ Google Analytics 4 (GA4) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PNC93WEF7E"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-PNC93WEF7E', { anonymize_ip: true, send_page_view: true });
+  </script>
+
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@graph": [
+      {
+        "@type": "Organization",
+        "@id": "https://kitchengearlab.github.io/#organization",
+        "name": "KitchenGearLab",
+        "url": "https://kitchengearlab.github.io/",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://kitchengearlab.github.io/assets/images/brand/kitchengearlab-logo-512.png",
+          "width": 512,
+          "height": 512
+        }
+      },
+      {
+        "@type": "WebSite",
+        "@id": "https://kitchengearlab.github.io/#website",
+        "name": "KitchenGearLab",
+        "url": "https://kitchengearlab.github.io/",
+        "publisher": { "@id": "https://kitchengearlab.github.io/#organization" },
+        "inLanguage": "en-US"
+      },
+      {
+        "@type": "BreadcrumbList",
+        "@id": "https://kitchengearlab.github.io/guides/#breadcrumbs",
+        "itemListElement": [
+          { "@type": "ListItem", "position": 1, "name": "Home", "item": "https://kitchengearlab.github.io/" },
+          { "@type": "ListItem", "position": 2, "name": "Guides", "item": "https://kitchengearlab.github.io/guides/" }
+        ]
+      },
+      {
+        "@type": "CollectionPage",
+        "@id": "https://kitchengearlab.github.io/guides/#webpage",
+        "url": "https://kitchengearlab.github.io/guides/",
+        "name": "Guides | KitchenGearLab",
+        "description": "Practical kitchen gear guides: how to choose, what matters, and clear explanations before you buy.",
+        "isPartOf": { "@id": "https://kitchengearlab.github.io/#website" },
+        "publisher": { "@id": "https://kitchengearlab.github.io/#organization" },
+        "inLanguage": "en-US",
+        "breadcrumb": { "@id": "https://kitchengearlab.github.io/guides/#breadcrumbs" },
+        "datePublished": "2026-02-01",
+        "dateModified": "2026-02-01"
+      }
+    ]
+  }
+  </script>
+</head>
+
+<body>
+  <a class="skip-link" href="#main">Skip to content</a>
+
+  <header class="site-header" role="banner">
+    <div class="container">
+      <div class="header-inner">
+        <a class="brand" href="/" aria-label="KitchenGearLab home">
+          <img
+            src="https://kitchengearlab.github.io/assets/images/brand/kitchengearlab-logo-512.png"
+            width="32"
+            height="32"
+            alt=""
+            loading="eager"
+            decoding="async"
+          />
+          <span class="brand-text">
+            <span class="brand-name">KitchenGearLab</span>
+            <span class="brand-tagline">Neutral reviews. Practical decisions.</span>
+          </span>
+        </a>
+
+        <nav class="site-nav" aria-label="Primary">
+          <ul class="nav-list">
+            <li><a href="/guides/" aria-current="page">Guides</a></li>
+            <li><a href="/best-air-fryers/">Best Air Fryers</a></li>
+            <li><a href="/best-air-fryers/ninja-air-fryers/">Ninja Hub</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
+
+  <main id="main" role="main" tabindex="-1">
+
+    <section class="hero" aria-labelledby="hero-title">
+      <div class="container">
+        <div class="hero-grid">
+
+          <div class="hero-copy" style="grid-column: 1 / -1; max-width: 70ch;">
+            <h1 id="hero-title">Guides</h1>
+
+            <p class="lead">
+              Clear, practical explainers to help you choose gear with confidence.
+              We focus on what matters in daily use: workflow, cleanup, consistency, and real trade-offs.
+            </p>
+
+            <div class="hero-actions" role="group" aria-label="Primary actions">
+              <a class="btn btn-accent" href="/best-air-fryers/">Start with Best Air Fryers</a>
+              <a class="btn btn-secondary" href="#all-guides">Browse all guides</a>
+            </div>
+
+            <p class="small">Last updated: 2026-02-01</p>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <section class="section" id="all-guides" aria-labelledby="all-title">
+      <div class="container">
+        <div class="section-head">
+          <h2 id="all-title">All guides</h2>
+          <p class="section-subtitle">Explain-first content before you commit to a purchase.</p>
+        </div>
+
+        <div class="cards" role="list">
+          <article class="card" role="listitem">
+            <h3 class="card-title"><a href="/guides/what-is-an-air-fryer/">What is an air fryer?</a></h3>
+            <p class="card-text">A calm explainer: how it works, what it’s good at, and what it can’t replace.</p>
+            <p class="card-meta"><a class="card-link" href="/guides/what-is-an-air-fryer/">Read</a></p>
+          </article>
+
+          <article class="card" role="listitem">
+            <h3 class="card-title"><a href="/guides/how-to-choose-an-air-fryer/">How to choose an air fryer</a></h3>
+            <p class="card-text">Capacity, controls, cleanup, and the trade-offs that actually change your results.</p>
+            <p class="card-meta"><a class="card-link" href="/guides/how-to-choose-an-air-fryer/">Read</a></p>
+          </article>
+
+          <article class="card" role="listitem">
+            <h3 class="card-title"><a href="/guides/are-air-fryers-worth-it/">Are air fryers worth it?</a></h3>
+            <p class="card-text">When it makes sense and when it becomes countertop clutter.</p>
+            <p class="card-meta"><a class="card-link" href="/guides/are-air-fryers-worth-it/">Read</a></p>
+          </article>
+        </div>
+
+        <div class="note" style="margin-top: 18px;">
+          <p class="small" style="margin:0;">
+            Want more? We’ll add new guides as categories expand. For now, the best starting point is
+            <a href="/best-air-fryers/">Best Air Fryers</a>.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="section" aria-labelledby="method-title">
+      <div class="container">
+        <div class="section-head">
+          <h2 id="method-title">How to use these guides</h2>
+          <p class="section-subtitle">A simple order that saves time (and regrets).</p>
+        </div>
+
+        <div class="stack">
+          <ol>
+            <li><strong>Start with a “what is it?” guide</strong> to understand the real use-cases.</li>
+            <li><strong>Read “how to choose”</strong> to learn the variables that matter.</li>
+            <li><strong>Then open the shortlist</strong> (like <a href="/best-air-fryers/">Best Air Fryers</a>) when you’re ready to decide.</li>
+          </ol>
+
+          <div class="note attention">
+            <p class="small" style="margin:0;">
+              Informational only. Product details and availability can change over time.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+  </main>
+
+  <footer class="site-footer" role="contentinfo">
+    <div class="container">
+      <div class="footer-grid">
+        <div>
+          <p class="footer-name">KitchenGearLab</p>
+          <p class="footer-note">Neutral, test-driven kitchen gear reviews and buying guides.</p>
+        </div>
+
+        <nav aria-label="Footer">
+          <ul class="footer-links">
+            <li><a href="/guides/">Guides</a></li>
+            <li><a href="/best-air-fryers/">Best Air Fryers</a></li>
+            <li><a href="/best-air-fryers/ninja-air-fryers/">Ninja Hub</a></li>
+            <li><a href="/about/">About</a></li>
+            <li><a href="/disclosure/">Disclosure</a></li>
+            <li><a href="/privacy/">Privacy</a></li>
+          </ul>
+        </nav>
+      </div>
+
+      <div class="footer-legal">
+        <p class="small">
+          Affiliate disclosure: Some links may earn a commission. See <a href="/disclosure/">Disclosure</a>.
+        </p>
+        <p class="small">
+          Privacy: <a href="/privacy/">Privacy policy</a>.
+        </p>
+        <p class="small"><span aria-hidden="true">©</span> KitchenGearLab</p>
+      </div>
+    </div>
+  </footer>
+</body>
+</html>
