--- a/guides/what-is-an-air-fryer/index.html
+++ b/guides/what-is-an-air-fryer/index.html
@@ -1,1 +1,349 @@
+<!doctype html>
+<html lang="en-US">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+  <title>What Is an Air Fryer? How It Works & What It’s Good For (2026) | KitchenGearLab</title>
+  <meta name="description" content="What is an air fryer? A clear, calm explanation of how air fryers work, what foods they’re best for, and the trade-offs that matter in real kitchens." />
+  <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
+  <meta name="referrer" content="strict-origin-when-cross-origin" />
+  <meta name="color-scheme" content="light only" />
+  <meta name="theme-color" content="#ffffff" />
+
+  <link rel="canonical" href="https://kitchengearlab.github.io/guides/what-is-an-air-fryer/" />
+  <link rel="stylesheet" href="/assets/css/styles.css" />
+
+  <!-- Favicons (root) -->
+  <link rel="icon" href="/favicon.ico" sizes="any" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+
+  <!-- Open Graph -->
+  <meta property="og:site_name" content="KitchenGearLab" />
+  <meta property="og:type" content="article" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:url" content="https://kitchengearlab.github.io/guides/what-is-an-air-fryer/" />
+  <meta property="og:title" content="What Is an Air Fryer? How It Works & What It’s Good For (2026)" />
+  <meta property="og:description" content="A clear, calm explanation of what an air fryer is, how it works, and when it’s actually useful." />
+  <meta property="og:image" content="https://kitchengearlab.github.io/assets/images/og/what-is-an-air-fryer-og-1200x630.webp" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:type" content="image/webp" />
+  <meta property="og:image:alt" content="Modern countertop air fryer setup in a clean kitchen, softly lit by natural daylight." />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="What Is an Air Fryer? How It Works & What It’s Good For (2026)" />
+  <meta name="twitter:description" content="A clear, calm explanation of what an air fryer is, how it works, and when it’s actually useful." />
+  <meta name="twitter:image" content="https://kitchengearlab.github.io/assets/images/og/what-is-an-air-fryer-og-1200x630.webp" />
+  <meta name="twitter:image:alt" content="Modern countertop air fryer setup in a clean kitchen, softly lit by natural daylight." />
+
+  <!-- Performance: Hero preload -->
+  <link rel="preload" as="image"
+        href="https://kitchengearlab.github.io/assets/images/hero/what-is-an-air-fryer-hero-1600x840.webp"
+        imagesrcset="https://kitchengearlab.github.io/assets/images/hero/what-is-an-air-fryer-hero-1600x840.webp 1600w, https://kitchengearlab.github.io/assets/images/hero/what-is-an-air-fryer-hero-2400x1260.webp 2400w"
+        imagesizes="(max-width: 900px) 100vw, 40vw" />
+
+  <link rel="preload" as="image"
+        href="https://kitchengearlab.github.io/assets/images/brand/kitchengearlab-logo-512.png" />
+
+  <!-- GA4: connection hints -->
+  <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin />
+  <link rel="dns-prefetch" href="//www.googletagmanager.com" />
+
+  <!-- ✅ Google Analytics 4 (GA4) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PNC93WEF7E"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-PNC93WEF7E', { anonymize_ip: true, send_page_view: true });
+  </script>
+
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@graph": [
+      {
+        "@type": "Organization",
+        "@id": "https://kitchengearlab.github.io/#organization",
+        "name": "KitchenGearLab",
+        "url": "https://kitchengearlab.github.io/",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://kitchengearlab.github.io/assets/images/brand/kitchengearlab-logo-512.png",
+          "width": 512,
+          "height": 512
+        }
+      },
+      {
+        "@type": "WebSite",
+        "@id": "https://kitchengearlab.github.io/#website",
+        "name": "KitchenGearLab",
+        "url": "https://kitchengearlab.github.io/",
+        "publisher": { "@id": "https://kitchengearlab.github.io/#organization" },
+        "inLanguage": "en-US"
+      },
+      {
+        "@type": "BreadcrumbList",
+        "@id": "https://kitchengearlab.github.io/guides/what-is-an-air-fryer/#breadcrumbs",
+        "itemListElement": [
+          { "@type": "ListItem", "position": 1, "name": "Home", "item": "https://kitchengearlab.github.io/" },
+          { "@type": "ListItem", "position": 2, "name": "Guides", "item": "https://kitchengearlab.github.io/guides/" },
+          { "@type": "ListItem", "position": 3, "name": "What is an air fryer?", "item": "https://kitchengearlab.github.io/guides/what-is-an-air-fryer/" }
+        ]
+      },
+      {
+        "@type": "Article",
+        "@id": "https://kitchengearlab.github.io/guides/what-is-an-air-fryer/#article",
+        "headline": "What Is an Air Fryer? How It Works & What It’s Good For (2026)",
+        "description": "What is an air fryer? A clear, calm explanation of how air fryers work, what foods they’re best for, and the trade-offs that matter in real kitchens.",
+        "mainEntityOfPage": "https://kitchengearlab.github.io/guides/what-is-an-air-fryer/",
+        "isPartOf": { "@id": "https://kitchengearlab.github.io/#website" },
+        "publisher": { "@id": "https://kitchengearlab.github.io/#organization" },
+        "inLanguage": "en-US",
+        "datePublished": "2026-02-01",
+        "dateModified": "2026-02-01"
+      }
+    ]
+  }
+  </script>
+</head>
+
+<body>
+  <a class="skip-link" href="#main">Skip to content</a>
+
+  <header class="site-header" role="banner">
+    <div class="container">
+      <div class="header-inner">
+        <a class="brand" href="/" aria-label="KitchenGearLab home">
+          <img
+            src="https://kitchengearlab.github.io/assets/images/brand/kitchengearlab-logo-512.png"
+            width="32"
+            height="32"
+            alt=""
+            loading="eager"
+            decoding="async"
+          />
+          <span class="brand-text">
+            <span class="brand-name">KitchenGearLab</span>
+            <span class="brand-tagline">Neutral reviews. Practical decisions.</span>
+          </span>
+        </a>
+
+        <nav class="site-nav" aria-label="Primary">
+          <ul class="nav-list">
+            <li><a href="/guides/">Guides</a></li>
+            <li><a href="/best-air-fryers/">Best Air Fryers</a></li>
+            <li><a href="/best-air-fryers/ninja-air-fryers/">Ninja Hub</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
+
+  <main id="main" role="main" tabindex="-1">
+
+    <section class="hero" aria-labelledby="hero-title">
+      <div class="container">
+        <div class="hero-grid">
+
+          <div class="hero-copy">
+            <h1 id="hero-title">What is an air fryer?</h1>
+
+            <p class="lead">
+              An air fryer is a small countertop convection oven that uses strong airflow to brown and crisp food faster.
+              It’s not a magic fryer, it’s efficient hot air and good airflow around the surface.
+            </p>
+
+            <ul class="checklist">
+              <li><strong>Best at:</strong> crisping and browning small portions quickly.</li>
+              <li><strong>Not best at:</strong> large trays, wet batters, and huge batch cooking.</li>
+              <li><strong>Big factor:</strong> basket layout and capacity decide results.</li>
+            </ul>
+
+            <div class="hero-actions" role="group" aria-label="Primary actions">
+              <a class="btn btn-accent" href="/best-air-fryers/">See Best Air Fryers</a>
+              <a class="btn btn-secondary" href="#how-it-works">How it works</a>
+            </div>
+
+            <p class="micro-note">
+              Next:
+              <a href="/guides/how-to-choose-an-air-fryer/">How to choose</a> ·
+              <a href="/guides/are-air-fryers-worth-it/">Are they worth it?</a>
+            </p>
+
+            <p class="small">Last updated: 2026-02-01</p>
+          </div>
+
+          <div class="hero-media" aria-label="Hero image">
+            <picture>
+              <source
+                type="image/webp"
+                srcset="https://kitchengearlab.github.io/assets/images/hero/what-is-an-air-fryer-hero-1600x840.webp 1600w,
+                        https://kitchengearlab.github.io/assets/images/hero/what-is-an-air-fryer-hero-2400x1260.webp 2400w"
+                sizes="(max-width: 900px) 100vw, 40vw"
+              />
+              <img
+                src="https://kitchengearlab.github.io/assets/images/hero/what-is-an-air-fryer-hero-1600x840.webp"
+                width="1600"
+                height="840"
+                alt="Modern countertop air fryer setup in a clean kitchen, softly lit by natural daylight."
+                loading="eager"
+                decoding="async"
+                fetchpriority="high"
+              />
+            </picture>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <section class="section" id="how-it-works" aria-labelledby="how-title">
+      <div class="container">
+        <div class="section-head">
+          <h2 id="how-title">How an air fryer works</h2>
+          <p class="section-subtitle">Convection cooking, in a smaller box, with stronger airflow.</p>
+        </div>
+
+        <div class="stack">
+          <p>
+            Inside an air fryer, a heating element warms the air while a fan moves it quickly around the food.
+            That airflow helps moisture evaporate from the surface, which supports browning and crisping.
+          </p>
+
+          <div class="note">
+            <p class="small" style="margin:0;">
+              Practical takeaway: crisping depends on <strong>airflow reaching the surface</strong>.
+              Crowd the basket and results drop fast.
+            </p>
+          </div>
+
+          <ul>
+            <li><strong>Smaller chamber:</strong> heats faster than a full oven.</li>
+            <li><strong>High airflow:</strong> improves surface browning on many foods.</li>
+            <li><strong>Basket layout:</strong> affects airflow and cleanup.</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section class="section highlight" aria-labelledby="goodfor-title">
+      <div class="container">
+        <div class="section-head">
+          <h2 id="goodfor-title">What air fryers are good for</h2>
+          <p class="section-subtitle">Foods and situations where they feel genuinely useful.</p>
+        </div>
+
+        <div class="stack">
+          <ul>
+            <li><strong>Frozen foods:</strong> fries, nuggets, wings, snacks.</li>
+            <li><strong>Quick roasted vegetables:</strong> small batches with crisp edges.</li>
+            <li><strong>Reheating:</strong> leftovers that should stay crisp (pizza, fries).</li>
+            <li><strong>Small meals:</strong> when an oven feels like overkill.</li>
+          </ul>
+
+          <div class="note">
+            <p class="small" style="margin:0;">
+              If your week includes “crisp things” often, an air fryer earns its spot.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section" aria-labelledby="notgood-title">
+      <div class="container">
+        <div class="section-head">
+          <h2 id="notgood-title">What they’re not great for</h2>
+          <p class="section-subtitle">Where expectations usually go wrong.</p>
+        </div>
+
+        <div class="stack">
+          <ul>
+            <li><strong>Wet batters:</strong> they don’t “set” like deep frying.</li>
+            <li><strong>Large tray baking:</strong> cookies, big sheet-pan meals.</li>
+            <li><strong>Big families at once:</strong> unless you accept multiple batches.</li>
+            <li><strong>High-mess cooking:</strong> some designs smoke more than people expect.</li>
+          </ul>
+
+          <div class="note attention">
+            <p class="small" style="margin:0;">
+              Most disappointment comes from <strong>buying too small</strong> or expecting deep-fry results.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section highlight" aria-labelledby="next-title">
+      <div class="container">
+        <div class="section-head">
+          <h2 id="next-title">Next steps</h2>
+          <p class="section-subtitle">If you’re deciding what to buy, don’t stop here.</p>
+        </div>
+
+        <div class="stack">
+          <div class="hero-actions" role="group" aria-label="Next steps">
+            <a class="btn btn-accent" href="/guides/how-to-choose-an-air-fryer/">How to choose</a>
+            <a class="btn btn-secondary" href="/best-air-fryers/">Best Air Fryers</a>
+          </div>
+
+          <div class="note">
+            <p class="small" style="margin:0;">
+              Shopping one brand? Use the hub:
+              <a href="/best-air-fryers/ninja-air-fryers/">Ninja Air Fryers Hub</a>.
+            </p>
+          </div>
+
+          <div class="note attention">
+            <p class="small" style="margin:0;">
+              Informational only. Product details change over time and performance varies by model and usage.
+            </p>
+          </div>
+
+          <p class="small">Last updated: 2026-02-01</p>
+        </div>
+      </div>
+    </section>
+
+  </main>
+
+  <footer class="site-footer" role="contentinfo">
+    <div class="container">
+      <div class="footer-grid">
+        <div>
+          <p class="footer-name">KitchenGearLab</p>
+          <p class="footer-note">Neutral, test-driven kitchen gear reviews and buying guides.</p>
+        </div>
+
+        <nav aria-label="Footer">
+          <ul class="footer-links">
+            <li><a href="/guides/">Guides</a></li>
+            <li><a href="/best-air-fryers/">Best Air Fryers</a></li>
+            <li><a href="/best-air-fryers/ninja-air-fryers/">Ninja Hub</a></li>
+            <li><a href="/about/">About</a></li>
+            <li><a href="/disclosure/">Disclosure</a></li>
+            <li><a href="/privacy/">Privacy</a></li>
+          </ul>
+        </nav>
+      </div>
+
+      <div class="footer-legal">
+        <p class="small">
+          Affiliate disclosure: Some links may earn a commission. See <a href="/disclosure/">Disclosure</a>.
+        </p>
+        <p class="small">
+          Privacy: <a href="/privacy/">Privacy policy</a>.
+        </p>
+        <p class="small"><span aria-hidden="true">©</span> KitchenGearLab</p>
+      </div>
+    </div>
+  </footer>
+</body>
+</html>
